// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeEditor should render 1`] = `
<div>
  <div
    class="frontView undefined makeStyles-dataContainerOverlap-7 makeStyles-badgeGeneralRadius-59 "
  >
    <div
      class="undefined makeStyles-dataContainer-6 makeStyles-badgeInfoRadius-60"
    >
      <div
        class=""
      >
        <span
          class="MuiBadge-root makeStyles-badgePosition-15 makeStyles-badgeMedium-44"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circle  makeStyles-avatarWrapper-33 makeStyles-badgeMedium-44  MuiAvatar-colorDefault"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              />
            </svg>
          </div>
          <span
            class="MuiBadge-badge MuiBadge-anchorOriginBottomRightCircle MuiBadge-invisible"
          />
        </span>
      </div>
      <div
        class=" undefined makeStyles-badgeTextWrapper-11"
      >
        <p
          class="MuiTypography-root makeStyles-badgeLayoutTitle-51 MuiTypography-body1"
        >
          Worker
           
          Name
        </p>
        <p
          class="MuiTypography-root makeStyles-badgeLayoutSubtitle-52 MuiTypography-body1"
        >
          Company Name
        </p>
      </div>
      <div
        class="undefined makeStyles-badgeTextWrapper-11"
      >
        <p
          class="MuiTypography-root makeStyles-badgeLayoutSubtitle-52 makeStyles-badgeCode-49 MuiTypography-body1"
        >
          XX 00 XX
        </p>
      </div>
      <div
        class="makeStyles-barcodePosition-17"
      >
        <svg>
          barcode.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`BadgeEditor should render logo 1`] = `
<div>
  <div
    class="frontView undefined makeStyles-dataContainerOverlap-73 makeStyles-badgeGeneralRadius-125 "
  >
    <div
      class="undefined makeStyles-dataContainer-72 makeStyles-badgeInfoRadius-126"
    >
      <img
        alt="Badge Logo"
        srcset="logo 1x, logo 2x"
      />
      <div
        class=""
      >
        <span
          class="MuiBadge-root makeStyles-badgePosition-81 makeStyles-badgeMedium-110"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circle  makeStyles-avatarWrapper-99 makeStyles-badgeMedium-110  MuiAvatar-colorDefault"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              />
            </svg>
          </div>
          <span
            class="MuiBadge-badge MuiBadge-anchorOriginBottomRightCircle MuiBadge-invisible"
          />
        </span>
      </div>
      <div
        class=" undefined makeStyles-badgeTextWrapper-77"
      >
        <p
          class="MuiTypography-root makeStyles-badgeLayoutTitle-117 MuiTypography-body1"
        >
          Worker
           
          Name
        </p>
        <p
          class="MuiTypography-root makeStyles-badgeLayoutSubtitle-118 MuiTypography-body1"
        >
          Company Name
        </p>
      </div>
      <div
        class="undefined makeStyles-badgeTextWrapper-77"
      >
        <p
          class="MuiTypography-root makeStyles-badgeLayoutSubtitle-118 makeStyles-badgeCode-115 MuiTypography-body1"
        >
          XX 00 XX
        </p>
      </div>
      <div
        class="makeStyles-barcodePosition-83"
      >
        <svg>
          barcode.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;
